--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 :root {
   font-family: "Public Sans", sans-serif;
   font-size: 18px;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.btn {
+  background-image: linear-gradient(
+    90deg,
+    hsl(136, 65%, 51%),
+    hsl(192, 70%, 51%)
+  );
+  @apply text-white font-bold py-3 px-6 rounded-full;
+}
+
+body {
+  font-family: "Public Sans", sans-serif;
+  background-color: hsl(0, 0%, 98%);
+  @apply lg:overflow-x-hidden;
 }
